--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,11 @@ set -g default-terminal "screen-256color"
 set -g prefix C-a
 unbind C-b
 
+# shift+arrow in vim :)
+set-window-option -g xterm-keys on
+
+# Mouse control
+set -g mouse on
 
 # color schemes?
 set -g status-bg "colour235"
